assets/css/screen.css
/* ... */
.hljs-string,
.css .hljs-id,
.hljs-subst,
.hljs-type,
.ruby .hljs-class .hljs-parent,
.hljs-built_in,
.django .hljs-template_tag,
.django .hljs-variable,
.smalltalk .hljs-class,
.django .hljs-filter .hljs-argument,
.smalltalk .hljs-localvars,
.smalltalk .hljs-array,
.hljs-attr_selector,
.hljs-pseudo,
.hljs-addition,
.hljs-stream,
.hljs-envvar,
.apache .hljs-tag,
.apache .hljs-cbracket,
.tex .hljs-command,
.hljs-prompt,
.hljs-link_label,
.hljs-link_url {
  color: #e6db74;
}
.hljs-comment,
.hljs-javadoc,
.hljs-annotation,
.hljs-decorator,
.hljs-pi,
.hljs-doctype,
.hljs-deletion,
.hljs-shebang,
.apache .hljs-sqbracket,
.tex .hljs-formula {
  color: #75715e;
}
.coffeescript .javascript,
.javascript .xml,
.tex .hljs-formula,
.xml .javascript,
.xml .vbscript,
.xml .css,
.xml .hljs-cdata,
.xml .php,
.php .xml {
  opacity: 0.5;
}
/* ==========================================================================
   3. General
   ========================================================================== */
.masthead {
  background: rgba(130,207,208,0.6) url("../img/header.jpg") repeat;
  width: 30%;
  max-height: 100%;
  text-align: center;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  overflow: auto;
  padding-top: 80px;
}
.masthead .header-wrapper .line {
  display: inline-block;
  height: 3px;
  width: 30%;
  background: none;
}
.masthead .header-wrapper .logo {
  margin: 0;
  display: inline-block;
  height: auto;
}

.masthead .header-wrapper .logo a img {
  width: 250px;
  height: 250px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  border-radius: 50%;

}
.masthead .header-wrapper .logo + .title {
  position: initial;
}

.masthead .title,
.masthead .menu {
  background: rgb(255, 255, 255); /* Fall-back for browsers that don't
                                    support rgba */
  background: rgba(255, 255, 255, .5);
}

.masthead .header-wrapper .title a {
  position: relative;
  top: 50%;
}
.masthead .header-wrapper .title a h1 {
  font-size: 2.2rem;
  margin: 1rem 0 0.15rem 0;
  text-transform: uppercase;
  font-weight: 900;
  padding: 0 0.5rem;
}
.masthead .header-wrapper .title p {
  font-size: 1.2rem;
  margin: 0;
  text-transform: uppercase;
  font-weight: 400;
  padding: 0 0.5rem;
}
.masthead .header-wrapper .bottom {
  position: absolute;
  bottom: 10px;
  left: 0;
  right: 0;
}
.masthead .header-wrapper .bottom .menu {
  list-atyle: none;
  padding: 0;
  margin: 0;
}
.masthead .header-wrapper .bottom .menu li {
  display: inline-block;
}
.masthead .header-wrapper .bottom .menu li:hover a {
  bottom: 8px;
}
.masthead .header-wrapper .bottom .menu li a {
  color: #000;
  font-size: 2.4rem;
  position: relative;
  bottom: 0;
  transition: bottom 0.3s ease-in-out;
}
.masthead .header-wrapper .bottom .menu li:nth-child(2) {
  margin: 0 1.7rem;
}
/* ==========================================================================
   4. Post
   ========================================================================== */
.container {
  width: 70%;
  position: absolute;
  top: 0;
  right: 0;
  padding-bottom: 3.75rem;
}
.container .post {
  position: relative;
  margin: 0 auto;
  width: 80%;
  border-bottom: double 7px #49adad;
  padding: 3.75rem 0;
}
.container .post.single {
  padding: 3.75rem 0 0 0;
  border-bottom: none;
}
.container .post .header-post .meta-post time {
  font-size: 0.85rem;
}
.container .post .header-post .title-post {
  margin: 5px 0 15px 0;
  font-size: 2.2rem;
  font-weight: 900;
  color: #000;
}
.container .post .header-post .title-post a {
  color: #000;
  transition: color 0.2s ease-in-out;
}
.container .post .header-post .title-post a:hover {
  color: #49adad;
}
.container .post .img-post {
  display: inline-block;
  margin: 0;
  width: 100%;
  height: auto;
}
.container .post .img-post img {
  width: 100%;
}
.container .post .post-excerpt p {
  font-size: 1.1rem;
  line-height: 1.65;
  margin-top: 15px;
}
.container .post .post-excerpt p:last-child {
  padding: 5px 0 25px 0;
}
.container .post .post-excerpt p:last-child .more {
  display: block;
  padding: 0.35rem 1.3rem 0.4rem 1rem;
  border-radius: 50px;
  border: 2px solid #3f413a;
  color: #3f413a;
  outline: 0;
  float: right;
  font-size: 1rem;
  font-weight: 700;
  line-height: 2rem;
  transition: border-color 0.2s ease-in-out;
}
.container .post .post-excerpt p:last-child .more i {
  position: relative;
  left: 0.35rem;
  top: 0.2rem;
  font-size: 1.5rem;
  font-weight: 400;
  color: #49adad;
}
.container .post .post-excerpt p:last-child .more:hover {
  border-color: #49adad;
}
.container .post .post-excerpt p:last-child .more:hover i {
  -webkit-animation: arrow-bounce 2s infinite;
  -moz-animation: arrow-bounce 2s infinite;
  -o-animation: arrow-bounce 2s infinite;
  animation: arrow-bounce 2s infinite;
}
.container .post .content-post {
  border-bottom: double 7px #49adad;
  padding-bottom: 3rem;
}
.container .post .content-post p {
  font-size: 1.1rem;
  line-height: 1.65;
}
.footer-post{
  overflow: auto;
}
.container .post .footer-post {
  margin: 3rem 0;
  position: relative;
  padding: 0 3.5rem;
}
.container .post .footer-post .author-post {
  display: inline-block;
}
.container .post .footer-post .author-post .avatar {
  display: inline-block;
  width: 5.9rem;
  height: auto;
  margin-right: 20px;
  margin-top: 10px;
  float: left;
}
.container .post .footer-post .author-post .avatar img {
  width: 100%;
  height: 100%;
  border-radius: 50%;
}
.container .post .footer-post .author-post .bio {
  display: inline-block;
  width: 275px;
  overflow: hidden;
}
.container .post .footer-post .author-post .bio span {
  font-size: 0.85rem;
  font-style: italic;
  color: #bdc3c7;
}
.container .post .footer-post .author-post .bio .author-name {
  text-transform: uppercase;
  font-weight: 900;
  margin: 10px 0 8px 0;
}
.container .post .footer-post .author-post .bio .author-name a {
  font-size: 1.3rem;
  color: #000;
}
/* ... */

